testdata/invalid/invalid_bitflags_unparseable_uint.bop
[flags]
enum Flags : uint64 {
    A = (-1 & -1);
}